...
        tabBarLabelStyle: { fontFamily: type.label.fontFamily, fontSize: 12 },
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: t({ context: "tab", message: "Today" }),
          tabBarIcon: ({ color, focused }) => (
            <TabIcon name="today" color={color} focused={focused} />
          ),
        }}
      />
      <Tabs.Screen
        name="exchanges"
        options={{
          title: t({ context: "tab", message: "Exchanges" }),
          tabBarIcon: ({ color, focused }) => (
            <TabIcon name="exchanges" color={color} focused={focused} />
          ),
        }}
      />
      <Tabs.Screen
...
